fix: handle header text and input field overflow
The list header overflowed outside the screen, it now wraps properly.
The list header input field overflowed outside the screen and was not
properly aligned with the text, it now only fills 100% of its container
and aligns properly with the text.

Fixes #3

--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,18 @@
   cursor: pointer;
 }
 
+.list-header-text {
+  overflow: hidden;
+  line-height: 4.5rem;
+}
+
 .discreet-input {
   background-color: transparent;
   border: none;
   outline: none;
-  line-height: normal;
+  padding: 0 0 0.5rem;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .drag-handle {
